HZN-452: Migrate Tests to ITs