@@ -33,28 +33,22 @@
           </instructions>
         </configuration>
       </plugin>
-      <!-- TODO MVR verify if this is overwritten by parent -->
-      <!--<plugin>-->
-        <!--<groupId>org.apache.maven.plugins</groupId>-->
-        <!--<artifactId>maven-failsafe-plugin</artifactId>-->
-        <!--<version>2.16</version>-->
-        <!--<configuration>-->
-          <!--<skipITs>${skipITs}</skipITs>-->
-          <!--<argLine>-Xmx1g -Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>-->
-          <!--<systemPropertyVariables>-->
-            <!--<opennms.home>${project.build.testOutputDirectory}</opennms.home>-->
-            <!--<java.endorsed.dirs>${basedir}/target/endorsed</java.endorsed.dirs>-->
-          <!--</systemPropertyVariables>-->
-        <!--</configuration>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<goals>-->
-              <!--<goal>integration-test</goal>-->
-              <!--<goal>verify</goal>-->
-            <!--</goals>-->
-          <!--</execution>-->
-        <!--</executions>-->
-      <!--</plugin>-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <systemPropertyVariables>
+            <opennms.home>${project.build.testOutputDirectory}</opennms.home>
+            <java.endorsed.dirs>${basedir}/target/endorsed</java.endorsed.dirs>
+            <ssl.debug>true</ssl.debug>
+            <javax.net.debug>ssl,handshake,verbose</javax.net.debug>
+            <javax.net.ssl.keyStore>target/test-keystore.jks</javax.net.ssl.keyStore>
+            <javax.net.ssl.keyStorePassword>password</javax.net.ssl.keyStorePassword>
+            <javax.net.ssl.trustStore>target/test-keystore.jks</javax.net.ssl.trustStore>
+            <javax.net.ssl.trustStorePassword>password</javax.net.ssl.trustStorePassword>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
       <!-- We create a key for 'localhost' for test purposes -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -77,20 +71,6 @@
           <keystore>${project.build.directory}/test-keystore.jks</keystore>
           <storepass>password</storepass>
           <validity>2</validity>
-        </configuration>
-      </plugin>
-      <!-- TODO MVR we need this for failsafe instead of surefire, but who cares ... :) -->
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <systemPropertyVariables>
-            <ssl.debug>true</ssl.debug>
-            <javax.net.debug>ssl,handshake,verbose</javax.net.debug>
-            <javax.net.ssl.keyStore>target/test-keystore.jks</javax.net.ssl.keyStore>
-            <javax.net.ssl.keyStorePassword>password</javax.net.ssl.keyStorePassword>
-            <javax.net.ssl.trustStore>target/test-keystore.jks</javax.net.ssl.trustStore>
-            <javax.net.ssl.trustStorePassword>password</javax.net.ssl.trustStorePassword>
-          </systemPropertyVariables>
         </configuration>
       </plugin>
     </plugins>
@@ -120,13 +100,6 @@
       <groupId>org.opennms</groupId>
       <artifactId>opennms-util</artifactId>
     </dependency>
-    <!-- TODO MVR what to do with this dependency?
-    The measurement API should not have any dependencies to the analytics filter -->
-    <!--<dependency>-->
-      <!--<groupId>org.opennms</groupId>-->
-      <!--<artifactId>analytics-filters</artifactId>-->
-      <!--<version>${project.version}</version>-->
-    <!--</dependency>-->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
